syntax = "proto3";

option go_package = "github.com/opencord/roc-api/api/v1";

package endpoint;

message MBR {
  int64 uplink = 1;
  int64 downlink = 2;
}

message Endpoint {
  string ID = 1;
  string Description = 2;
  string DisplayName = 3;
  MBR Mbr = 4;

  int32 PortStart = 5;
  int32  PortEnd = 6;
  string Protocol = 7;
}

message Endpoints {
  repeated Endpoint endpoints = 1;
}


